Support Java 11 (#131)
Update Java to 11